# volleyball

./: .gitignore  Readme.md
.devcontainer/: Dockerfile  Dockerfile.minimal  Dockerfile_go  docker-compose.yml  (+1 more)
templates/: Cargo.toml  Makefile  README.md
templates/actors/game_logic/: Cargo.toml  Makefile  wadm.yaml
templates/actors/game_logic/src/: lib.rs
templates/actors/game_logic/src/client_message_handlers/: mod.rs  target_velocity_handler.rs  welcome_handler.rs
templates/actors/game_logic/src/plugins/: physics.rs
templates/actors/game_logic/src/startup/: mod.rs
templates/actors/game_logic/src/systems/: mod.rs
templates/actors/game_logic/src/thread/: mod.rs
templates/capability_providers/game-provider/: Makefile
templates/configs/: leaf.conf  manifest.yaml  websocket_lite.conf
templates/contexts/: host_config.json
templates/data/current/: auth.json
templates/interfaces/thread/rust/src/: thread.rs
templates/keys/: nats_messaging_service.nk
templates/multitenary/src/: lib.rs
templates/nats-rest-config-proxy_data/current/: auth.json
templates/nats_configs/: insecure_leaf.conf  leaf.conf
templates/nginx_configs/: nginx.conf  nginx_insecure.conf
templates/shared/src/: bundle.rs  lib.rs  plugin.rs
templates/shared/src/systems/: lib.rs
templates/shared/src/systems/physics/: collider.rs  volleyball.rs
templates/shared/src/update/: target_velocity.rs
templates/volleyball/: Cargo.toml  README.md
templates/volleyball/actors/game_logic/: Cargo.toml
templates/volleyball/actors/game_logic/src/: spawn_.rs
templates/volleyball/actors/game_logic/src/client_message_handlers/: jump_handler.rs  welcome_handler.rs
templates/volleyball/actors/game_logic/src/startup/: mod.rs
templates/volleyball/multitenary/: Cargo.toml
templates/volleyball/shared/src/: scoreboard.rs
templates/volleyball/shared/src/systems/: lib.rs
templates/volleyball/shared/src/systems/physics/: mod.rs  player.rs
templates/volleyball/www/: Cargo.toml  Makefile.toml
templates/volleyball/www/crates/apps/client/src/: main.rs
templates/volleyball/www/crates/components/protocol/src/: event.rs  lib.rs
templates/volleyball/www/crates/plugins/map/: Cargo.toml
templates/volleyball/www/crates/plugins/map/src/: layer.rs
templates/volleyball/www/crates/plugins/physics-rapier/src/: lib.rs
templates/volleyball/www/crates/plugins/protocol/src/: c_.rs  lib.rs  wasm.rs
templates/volleyball/www/crates/plugins/protocol/src/msg_handler/: game_state.rs  target_velocity.rs
templates/volleyball/www/crates/plugins/sprite-character/: Cargo.toml
templates/volleyball/www/crates/plugins/sprite-character/src/single_image/: mod.rs
templates/volleyball/www/crates/plugins/ui/src/: new_ball.rs  radio_button.rs  score.rs
templates/wash_keys/: game-provider_service.nk
templates/wasmcloud_configs/: manifest_secure.yaml
templates/wasmcloud_contexts/: host_config.json
templates/www/: Makefile.toml
templates/www/crates/apps/client/: Cargo.toml
templates/www/crates/components/protocol/: Cargo.toml
templates/www/crates/components/protocol/src/: command.rs
templates/www/crates/plugins/map/src/: lib.rs
templates/www/crates/plugins/map/src/helpers/: camera.rs
templates/www/crates/plugins/physics-rapier/src/: shape.rs
templates/www/crates/plugins/physics-rapier/src/system/: mod.rs
templates/www/crates/plugins/protocol/: Cargo.toml
templates/www/crates/plugins/protocol/src/: c_.rs  lib.rs  wasm.rs
templates/www/crates/plugins/protocol/src/startup/: new_ball.rs
templates/www/crates/plugins/sprite-character/src/: chicken.rs  lib.rs
templates/www/crates/plugins/sprite-character/src/sprite_sheet/: mod.rs
templates/www/crates/plugins/ui/: Cargo.toml
templates/www/crates/plugins/ui/src/: lib.rs
templates/www/public/: index.html
(+23 files in other folders)
