[workspace]

resolver = "2"

members = [
  "crates/components/*",
  "crates/plugins/*",
  "crates/apps/*",
]

default-members = [
  "crates/components/*",
  "crates/plugins/*",
  "crates/apps/*",
]

[patch.crates-io]
bevy_ecs = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d",default-features = false}
bevy = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d",default-features = false}

# [patch."https://github.com/alanpoon/bevy_wasmcloud_lib"]
# nats-lite = {path="../../../bevy_wasmcloud_lib/crates/nats-lite"}
# cross-websocket = {path="../../../bevy_wasmcloud_lib/crates/cross-websocket"}
# client-websocket = {package="boltless-client-websocket",path="../../../bevy_wasmcloud_lib/crates/client-websocket"}