[package]
name = "boltless-plugin-map"
version = "0.1.0"
authors = ["Alan poon <brightshadowx@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", default-features = false }
shared = { path = "../../../../shared"}
chrono = {version="0.4", features = ["wasmbind"]}