[package]
name = "boltless-plugin-sprite-character"
version = "0.1.0"
authors = ["Alan Poon <brightshadowx@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", default-features = false }
shared = { path = "../../../../shared"}
serde = { version = "1.0.123", features = ["derive"]}
serde-wasm-bindgen = "0.4.5"
rand = "0.8.5"
rmp-serde = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.46"
wasm-bindgen = {version= "=0.2.83",features = ["serde-serialize"]}

[dependencies.web-sys]
version = "0.3.50"
features = [
  'Window'
]